--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "basic_calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cephalonyx.github.io/basic_calculator/",
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -21,5 +22,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
